Fix header alignment across browser sizes
Reduce page margin on mobile.

--- a/app/styles/hero.less
+++ b/app/styles/hero.less
@@ -1,23 +1,25 @@
 .Hero {
   font-size: 1.5rem;
-  padding: 1rem 2rem 4rem;
+  padding: 1rem 1rem 4rem;
 
   @media @tablet {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: -100px;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .Hero-headline {
     font-size: 1.6rem;
     line-height: 1.2;
     margin-bottom: 6rem;
-    padding: 0 2rem;
     text-align: center;
 
     @media @tablet {
       text-align: left;
+      padding: 0 2rem 0 0;
       width: 50%;
     }
 
@@ -39,7 +41,7 @@
   }
 
   .Hero-gif {
-    margin: 0 -2rem;
+    margin: 0 -1rem;
     width: 100vw;
 
     @media @tablet {
