--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -17,14 +17,14 @@
   padding: 0;
 }
 
-.content {
-  margin: 0 auto;
-  max-width: 1280px;
-  padding: 50px 0;
-}
-
 .container {
   margin: 0 auto;
-  padding: 0 50px;
+  padding-left: 1rem;
+  padding-right: 1rem;
   max-width: 960px;
+
+  @media @tablet {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
